--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Link cutter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Link Clipping</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.3.0/index.css"
+    />
     <link data-trunk rel="sass" href="index.scss" />
   </head>
+  <body></body>
 </html>
